@@ -4,7 +4,7 @@
 ; Double quotes in the values have to be formatted as "_QQ_"
 
 COM_PODCASTMANAGER="Podcast Manager"
-COM_PODCASTMANAGER_ERROR_INSTALL_J17="This release of Podcast Manager requires Joomla! 1.7.3 and Joomla! Platform 11.3 or newer"
+COM_PODCASTMANAGER_ERROR_INSTALL_JVERSION="This release of Podcast Manager requires Joomla! 2.5 or newer"
 COM_PODCASTMANAGER_ERROR_INSTALL_UPDATE="Could not retreive the version from the database, unable to process updates"
 COM_PODCASTMANAGER_VIEW_DEFAULT_DESCRIPTION="Allows users to submit new podcast episodes."
 COM_PODCASTMANAGER_VIEW_DEFAULT_OPTION="Add a Podcast Episode"
