@@ -4,7 +4,7 @@
 ; Double quotes in the values have to be formatted as "_QQ_"
 
 COM_PODCASTMANAGER="Podcast Manager"
-COM_PODCASTMANAGER_ERROR_INSTALL_J17="Esta versão do Podcast Manager requer Joomla! 1.7.1 ou mais recente"
+COM_PODCASTMANAGER_ERROR_INSTALL_JVERSION="Esta versão do Podcast Manager requer Joomla! 2.5 ou mais recente"
 COM_PODCASTMANAGER_ERROR_INSTALL_UPDATE="Não foi possível recuperar a versão do banco de dados, incapaz de processar atualizações"
 COM_PODCASTMANAGER_VIEW_DEFAULT_DESCRIPTION="Permite aos usuários enviar novos episódios de podcast."
 COM_PODCASTMANAGER_VIEW_DEFAULT_OPTION="Adicionar um Episódio de Podcast"
