@@ -4,5 +4,5 @@
 ; Double quotes in the values have to be formatted as "_QQ_"
 
 COM_PODCASTMEDIA="Podcast Manager: File Manager"
-COM_PODCASTMEDIA_ERROR_INSTALL_J17="This release of Podcast Manager requires Joomla! 1.7.1 or newer"
+COM_PODCASTMEDIA_ERROR_INSTALL_JVERSION="This release of Podcast Manager requires Joomla! 2.5 or newer"
 COM_PODCASTMEDIA_XML_DESCRIPTION="Component for managing media for Podcast Manager"
