@@ -4,5 +4,5 @@
 ; Double quotes in the values have to be formatted as "_QQ_"
 
 COM_PODCASTMEDIA="Podcast Manager: Gerenciador de Arquivos"
-COM_PODCASTMEDIA_ERROR_INSTALL_J17="Esta versão do Podcast Manager requer Joomla! 1.7.1 ou mais recente"
+COM_PODCASTMEDIA_ERROR_INSTALL_JVERSION="Esta versão do Podcast Manager requer Joomla! 2.5 ou mais recente"
 COM_PODCASTMEDIA_XML_DESCRIPTION="Componente de gerenciamento de mídia para o Podcast Manager"
