@@ -5,5 +5,5 @@
 
 MOD_PODCASTMANAGER="Podcast Manager"
 MOD_PODCASTMANAGER_ERROR_COMPONENT="You do not have Podcast Manager installed.  Please install it before installing this module."
-MOD_PODCASTMANAGER_ERROR_INSTALL_J17="This release of Podcast Manager requires Joomla! 1.7.1 or newer"
+MOD_PODCASTMANAGER_ERROR_INSTALL_JVERSION="This release of Podcast Manager requires Joomla! 2.5 or newer"
 MOD_PODCASTMANAGER_XML_DESCRIPTION="The Podcast Manager module provides links for site visitors to subscribe to your podcast feeds."
