@@ -5,5 +5,5 @@
 
 MOD_PODCASTMANAGERFEED="Podcast Manager Feed Listing"
 MOD_PODCASTMANAGERFEED_ERROR_COMPONENT="You do not have Podcast Manager installed.  Please install it before installing this module."
-MOD_PODCASTMANAGERFEED_ERROR_INSTALL_J17="This release of Podcast Manager requires Joomla! 1.7.1 or newer"
+MOD_PODCASTMANAGERFEED_ERROR_INSTALL_JVERSION="This release of Podcast Manager requires Joomla! 2.5 or newer"
 MOD_PODCASTMANAGERFEED_XML_DESCRIPTION="The Podcast Manager Feed Listing module provides a list of the latest published podcast episodes in a specified feed."
