@@ -5,5 +5,5 @@
 
 PLG_CONTENT_PODCASTMANAGER="Content - Podcast Manager"
 PLG_CONTENT_PODCASTMANAGER_ERROR_ACTIVATING_PLUGIN="Could not automatically activate the "_QQ_"Content - Podcast Manager"_QQ_" plugin"
-PLG_CONTENT_PODCASTMANAGER_ERROR_INSTALL_J17="This release of Podcast Manager requires Joomla! 1.7.1 or newer"
+PLG_CONTENT_PODCASTMANAGER_ERROR_INSTALL_JVERSION="This release of Podcast Manager requires Joomla! 2.5 or newer"
 PLG_CONTENT_PODCASTMANAGER_XML_DESCRIPTION="The Podcast Manager plugin turns {podcast Title} tags into players and links"
