@@ -5,5 +5,5 @@
 
 PLG_CONTENT_PODCASTMANAGER="Conteúdo - Podcast Manager"
 PLG_CONTENT_PODCASTMANAGER_ERROR_ACTIVATING_PLUGIN="Não foi possível ativar automaticamente o plugin "_QQ_"Conteúdo - Podcast Manager"_QQ_""
-PLG_CONTENT_PODCASTMANAGER_ERROR_INSTALL_J17="Esta versão do Podcast Manager requer Joomla! 1.7.1 ou mais recente"
+PLG_CONTENT_PODCASTMANAGER_ERROR_INSTALL_JVERSION="Esta versão do Podcast Manager requer Joomla! 2.5 ou mais recente"
 PLG_CONTENT_PODCASTMANAGER_XML_DESCRIPTION="O plugin Podcast Manager transforma {podcast ...} tags em players e links"
