@@ -5,5 +5,5 @@
 
 PLG_EDITORS-XTD_PODCASTMANAGER="Button - Podcast Manager"
 PLG_EDITORS-XTD_PODCASTMANAGER_ERROR_ACTIVATING_PLUGIN="Could not automatically activate the "_QQ_"Button - Podcast Manager"_QQ_" plugin"
-PLG_EDITORS-XTD_PODCASTMANAGER_ERROR_INSTALL_J17="This release of Podcast Manager requires Joomla! 1.7.1 or newer"
+PLG_EDITORS-XTD_PODCASTMANAGER_ERROR_INSTALL_JVERSION="This release of Podcast Manager requires Joomla! 2.5 or newer"
 PLG_EDITORS-XTD_PODCASTMANAGER_XML_DESCRIPTION="The Podcast Manager Button plugin adds a Podcast button to the article editor"
