@@ -5,5 +5,5 @@
 
 PLG_EDITORS-XTD_PODCASTMANAGER="Botão - Podcast Manager"
 PLG_EDITORS-XTD_PODCASTMANAGER_ERROR_ACTIVATING_PLUGIN="Não foi possível ativar automaticamente o plugin "_QQ_"Botão - Podcast Manager"_QQ_""
-PLG_EDITORS-XTD_PODCASTMANAGER_ERROR_INSTALL_J17="Esta versão do Podcast Manager requer Joomla! 1.7.1 ou mais recente"
+PLG_EDITORS-XTD_PODCASTMANAGER_ERROR_INSTALL_JVERSION="Esta versão do Podcast Manager requer Joomla! 2.5 ou mais recente"
 PLG_EDITORS-XTD_PODCASTMANAGER_XML_DESCRIPTION="O plugin Botão Podcast Manager adiciona um botão Podcast ao editor de artigos"
