@@ -4,5 +4,5 @@
 ; Double quotes in the values have to be formatted as "_QQ_"
 
 PLG_PODCASTMEDIA_USER="Podcast Manager: File Manager - User Directory"
-PLG_PODCASTMEDIA_USER_ERROR_INSTALL_J17="This release of Podcast Manager requires Joomla! 1.7.1 or newer"
+PLG_PODCASTMEDIA_USER_ERROR_INSTALL_JVERSION="This release of Podcast Manager requires Joomla! 2.5 or newer"
 PLG_PODCASTMEDIA_USER_XML_DESCRIPTION="The User Directory plugin tells the media field for podcast editing that the default directory will be the user's personal directory within the default path"
