@@ -1,3 +1,6 @@
+23-December-2011 Michael Babker
+! Raise minimum version to Joomla! 2.5
+
 1-December-2011 Michael Babker
 + Add option to enable/disable logging
 
